# aoc-2022

./: README.md  aoc-2022.opam  dune-project
.github/workflows/: ocaml.yml
01/: README.md  day01.ml  dune  input.txt
02/: README.md  day02.ml  dune  input.txt
03/: README.md  day03.ml  dune  input.txt
04/: README.md  day04.ml  dune  input.txt
05/: README.md  day05.ml  dune  input.txt
06/: README.md  day06.ml  dune  input.txt  test.txt
07/: README.md  day07.ml  dune  input.txt
08/: README.md  day08.ml  dune  input.txt
09/: README.md  day09.ml  dune  input.txt
10/: README.md  day10.ml  dune  input.txt
11/: README.md  day11.ml  dune  input.txt
12/: README.md  day12.ml  dune
13/: README.md  day13.ml  dune  input.txt
14/: README.md  day14.ml  dune  input.txt
15/: README.md  day15.ml  dune  input.txt
16/: README.md  day16.ml  dune  input.txt
17/: README.md  day17.ml  dune  input.txt
18/: README.md  day18.ml  dune  input.txt  test2.txt
19/: README.md  day19.ml  dune
20/: README.md  day20.ml  dune  input.txt  test2.txt
21/: README.md  day21.ml  dune  input.txt
